--- a/Microbiology/Microbiology-Intro.org
+++ b/Microbiology/Microbiology-Intro.org
@@ -3,6 +3,7 @@
 #+description: Notes, according to the syllabus of MU Sofia
 
 * 1. Introduction - History and Subject
+
 ** Microbiology is the study of microbes ff
 - Microbes are the living organisms
 - Require visualization through microscopy
@@ -26,10 +27,12 @@
     - Utilized photosynthesis which led to production of oxygen
     - As oxygen levels rose, organisms that utilized oxygen evolved(Aerobes and Eukaryotes)
     - Anaerobes developed resistance to oxygen, as it was toxic to them
-**** Endosymbiotic theory
-- A prokaryotic cell engulfed an aerobe cell, capable of producing ATP
-- Host cell provided a stable environment, engulfed cell provided host cell with ATP, this lead to a *symbiotic relationship*
-- The bacterium eventually evolved mitochondria - Prokaryotes -> Eukaryotes
+    - Endosymbiotic theory
+        - A prokaryotic cell engulfed an aerobe cell, capable of producing ATP
+        - Host cell provided a stable environment, engulfed cell provided host cell with ATP, this lead to a *symbiotic relationship*
+        - The bacterium eventually evolved mitochondria - Prokaryotes -> Eukaryotes
+   
+  
 * 2. Bacterial Taxonomy - Classification, Nomeclatures, Identification
 *** Hierarchy of Taxonomy
 1. Species
@@ -67,3 +70,5 @@ There are two kingdoms, *Plants or Animals*
 - Cocci(Spherical) e.g Staphylococcus
 - Bacili(Rods) e.g Clostridium
 
+*** 
+    
