--- a/Microbiology/Microbiology-Intro.org
+++ b/Microbiology/Microbiology-Intro.org
@@ -80,5 +80,6 @@ There are two kingdoms, *Plants or Animals*
         - No porin proteins 
         - Primarily produces exotoxins 
         - Contains Teichnoic acids 
+        - Random text insert here 
         
-    
+   
