--- a/Microbiology/Microbiology.org
+++ b/Microbiology/Microbiology.org
@@ -26,7 +26,7 @@
 - Utilized photosynthesis which led to production of oxygen
 - As oxygen levels rose, organisms that utilized oxygen evolved(Aerobes and Eukaryotes)
 - Anaerobes developed resistance to oxygen, as it was toxic to them
-**** Endosymbiotic theory
+- Endosymbiotic theory
 - A prokaryotic cell engulfed an aerobe cell, capable of producing ATP
 - Host cell provided a stable environment, engulfed cell provided host cell with ATP, this lead to a *symbiotic relationship*
 - The bacterium eventually evolved mitochondria - Prokaryotes -> Eukaryotes
