--- a/Microbiology/Microbiology.org
+++ b/Microbiology/Microbiology.org
@@ -7,29 +7,29 @@
 - Microbes are the living organisms
 - Require visualization through microscopy
 *** Microbes are divided into :
-**** Viruses
-- RNA or DNA
-- Double stranded or single stranded
-**** Bacteria
-- Gram positive or gram negative
-- Shape(e.g cocci, bacillus)
-**** Fungi
-- yeast(unicellular)
-- mold(multicellular)
-- dimorphic(yeast and mold)
-**** Parasites
-- Protozoa
-- Worms
-- Bugs
+- *Viruses*
+  - RNA or DNA
+  - Double stranded or single stranded
+- *Bacteria*
+  - Gram positive or gram negative
+  - Shape(e.g cocci, bacillus)
+- *Fungi*
+  - yeast(unicellular)
+  - mold(multicellular)
+  - dimorphic(yeast and mold)
+- *Parasites*
+  - Protozoa
+  - Worms
+  - Bugs
 *** History
 - Primitive cells evolved into bacteria and archae
 - Utilized photosynthesis which led to production of oxygen
 - As oxygen levels rose, organisms that utilized oxygen evolved(Aerobes and Eukaryotes)
 - Anaerobes developed resistance to oxygen, as it was toxic to them
-- Endosymbiotic theory
-- A prokaryotic cell engulfed an aerobe cell, capable of producing ATP
-- Host cell provided a stable environment, engulfed cell provided host cell with ATP, this lead to a *symbiotic relationship*
-- The bacterium eventually evolved mitochondria - Prokaryotes -> Eukaryotes
+- *Endosymbiotic theory*
+  - A prokaryotic cell engulfed an aerobe cell, capable of producing ATP
+  - Host cell provided a stable environment, engulfed cell provided host cell with ATP, this lead to a *symbiotic relationship*
+  - The bacterium eventually evolved mitochondria - Prokaryotes -> Eukaryotes
 * 2. Bacterial Taxonomy - Classification, Nomeclatures, Identification
 *** Hierarchy of Taxonomy
 1. Species
