--- a/Microbiology/Microbiology.org
+++ b/Microbiology/Microbiology.org
@@ -4,60 +4,55 @@
 
 * 1. Introduction - History and Subject
 *** Microbiology is the study of microbes
-- Microbes are the living organisms
-- Require visualization through microscopy
++ Microbes are the living organisms
++ Require visualization through microscopy
 *** Microbes are divided into :
-- *Viruses*
-  - RNA or DNA
-  - Double stranded or single stranded
-- *Bacteria*
-  - Gram positive or gram negative
-  - Shape(e.g cocci, bacillus)
-- *Fungi*
-  - yeast(unicellular)
-  - mold(multicellular)
-  - dimorphic(yeast and mold)
-- *Parasites*
-  - Protozoa
-  - Worms
-  - Bugs
++ *Viruses*
+  + RNA or DNA
+  + Double stranded or single stranded
++ *Bacteria*
+  + Gram positive or gram negative
+  + Shape(e.g cocci, bacillus)
++ *Fungi*
+  + yeast(unicellular)
+  + mold(multicellular)
+  + dimorphic(yeast and mold)
++ *Parasites*
+  + Protozoa
+  + Worms
+  + Bugs
 *** History
-- Primitive cells evolved into bacteria and archae
-- Utilized photosynthesis which led to production of oxygen
-- As oxygen levels rose, organisms that utilized oxygen evolved(Aerobes and Eukaryotes)
-- Anaerobes developed resistance to oxygen, as it was toxic to them
-- *Endosymbiotic theory*
-  - A prokaryotic cell engulfed an aerobe cell, capable of producing ATP
-  - Host cell provided a stable environment, engulfed cell provided host cell with ATP, this lead to a *symbiotic relationship*
-  - The bacterium eventually evolved mitochondria - Prokaryotes -> Eukaryotes
++ Primitive cells evolved into bacteria and archae
++ Utilized photosynthesis which led to production of oxygen
++ As oxygen levels rose, organisms that utilized oxygen evolved(Aerobes and Eukaryotes)
++ Anaerobes developed resistance to oxygen, as it was toxic to them
++ *Endosymbiotic theory*
+  + A prokaryotic cell engulfed an aerobe cell, capable of producing ATP
+  + Host cell provided a stable environment, engulfed cell provided host cell with ATP, this lead to a *symbiotic relationship*
+  + The bacterium eventually evolved mitochondria - Prokaryotes -> Eukaryotes
 * 2. Bacterial Taxonomy - Classification, Nomeclatures, Identification
-*** Hierarchy of Taxonomy
-1. Species
-2. Genus
-3. Order
-4. Class
-5. Family
-6. Division
-7. Kingdom
-There are two kingdoms, *Plants or Animals*
-*** Taxonomy
-- Refers to classification, nomeclature and identifcation
-**** Classification is based upon:
-- Size
-- Shape(e.g cocci or bacilus)
-- Arrangement(e.g in clusters on in chains)
-- Growth properties(e.g aerobe or anaerobe)
-**** Nomeclatures
-- Governed by international rules
-- The first word(Genus) is always capitalized
-- The second word(Species) is not capitalized
-/e.g Staphylococcus Aureus/
-**** Identification
-- Practical use of classification
-- We use identification properties to identify casuative agents of a disease
-- Methods :
-  - Cellular Morphology
-  - Staining characteristics
-  - Motility
-  - Growth characteristics
-  - Genetic analysis
+*** Classification
++ Categorization of organisms into taxonomic groups
++ Requires experimental and observational techniques
+  + Biochemical, physiologic, genetic and morphologic properties are necessary for a taxon description
+*** Nomeclature
++ Naming of the organism by international rules, according to it's characteristics
+*** Identification
++ Practical use of classification scheme to:
+  + Isolated and distinguish desirable organism
+  + Verify the authenticity or special properties of a culture
+  + *Isolated and identify causative agent of disease*
+
+*** Taxonomic ranks
++ Form the basis for the organization of bacteria, Linnaean taxonomy uses formal taxonomic tanks.
+| Formal Rank | Example                 |
+|-------------+-------------------------|
+| Kingdom     | Prokaryotes             |
+| Divison     | Gracilicutes            |
+| Class       | Scotobacteria           |
+| Order       | Eubacteriaceae          |
+| Family      | Enterobacteriaceae      |
+| Genus       | Escherichia             |
+| Species     | Coli                    |
+| Subtype     | Escherichia coli O157:7 |
+|-------------+-------------------------|
