--- a/Microbiology/Microbiology.org
+++ b/Microbiology/Microbiology.org
@@ -148,3 +148,70 @@ A new kingdom *Protista* was created to include these organisms. Protista has be
   + smaller genetic structures that can replicate independently of chromosomes
 + *Cytoplasmic inclusions*
   + Metachromatic granules that serve as a nutrient reserve
+
+* 32. Staphyloccous
+*** Characteristic:
++ Spherical cocci, grow in clusters
++ absence of endospores
++ non-motile
++ facultative anaerobic
++ Gram positive
++ Catalase positive
++ Present on skin and mucous membranes
++ Staphyloccous Aureus is the only coagulase positive Staphylococci
+*** S.Aureus
+**** Reservoir:
++ Skin
+**** Bacterial culture:
++ *Enzymes* :
+  + Catalase
+  + Coagulase
+  + Hyaluronidase
+  + Beta lactamases
++ *Toxins* :
+  + Superantigens :
+    + Toxin shock syndrome toxin(TSST-1)
+    + Enterotoxin(heat stable)
+  + Exfoliative toxin
++ *Proteins*
+  + Protein A -> Binds to the Fc region of IgG, preventing phagocytosis
+  + Modefied penicillin bidning proteins in MRSA
++ Capsular polysaccharides
+**** Diseases
++ Infections :
+  + Skin and soft tissue infections (e.g cellulitis)
+  + Abscess
+  + Acute bacterial endocarditis
+  + Septic arthritis
+  + Osteomyelitis
++ Toxin mediated diseases :
+  + Toxic shock syndrome
+  + Food poisoning
+  + Staphylococcal Skin Scalded Syndrome
+**** Treatment
++ MSSA -> Oxacillin or Clindamycin
++ MRSA -> Vancomycin or Linezolid
+*** Staphylococcus epidermidis
+**** Reservoir :
++ Skin
+**** Bacterial culture :
++ *Novobiocin-sensitive*
++ *Virulnce factors*
+  + urease producer
+  + biofilm formation
+    + Facilitates colonization of surfaces of prosthetic devices
+**** Diseases :
++ Foreign body infections; Prosthetic devices e.g heart valves, catheters
+**** Treatment :
++ Penicillin or Clindamycin
+*** Staphylococcus saprophyticus
+**** Reservoir
++ Natural vaginal flora
+**** Bacterial culture
++ *Novobiocin resistant*
+**** Virulence factors
++ Urease producer
+**** Diseases
++ UTIs
+**** Treatment
++ TMP/SMX or 1st generation cephasporin(e.g cephalexin)
